testsuite/tests/typecheck/should_compile/ExPatFail.stderr

ExPatFail.hs:12:15: error:
    • Couldn't match expected type ‘t’ with actual type ‘a’
        because type variable ‘a’ would escape its scope
      This (rigid, skolem) type variable is bound by
        a pattern with constructor:
          MkT :: forall a. Integral a => a -> Int -> T,
        in a pattern binding
        at ExPatFail.hs:12:11-17
    • In the pattern: MkT y _
      In a pattern binding: MkT y _ = x
      In the expression: let MkT y _ = x in y
    • Relevant bindings include
        f :: T -> t (bound at ExPatFail.hs:12:1)
